deployments/kustomize/hydra/overlays/minikube/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: hydra
          args:
            - serve
            - all
            - --dev
            - --config
            - /etc/config/hydra/hydra.yml
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
